--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             </div>
             
             <section id="galeria">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (1).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (2).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (3).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (4).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (5).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (6).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (7).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (8).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (9).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (10).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (11).jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/1.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/2.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/3.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/4.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/5.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/6.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/7.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/8.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/9.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/10.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/11.jpg" alt="galeria de imagenes">
                 <img class="img" src="/projects/photoAlbum/imgs/CD (12).jpg" alt="galeria de imagenes">
                 <img class="img" src="/projects/photoAlbum/imgs/CD (13).jpg" alt="galeria de imagenes">
                 <img class="img" src="/projects/photoAlbum/imgs/CD (14).jpg" alt="galeria de imagenes">
