--- a/index.html
+++ b/index.html
@@ -42,41 +42,16 @@
                 <img class="img" src="../PhotoAlbum/imgs/9.jpg" alt="galeria de imagenes">
                 <img class="img" src="../PhotoAlbum/imgs/10.jpg" alt="galeria de imagenes">
                 <img class="img" src="../PhotoAlbum/imgs/11.jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (12).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (13).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (14).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (15).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (16).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (17).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (18).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (19).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (20).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (21).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (22).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (23).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (24).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (25).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (26).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (27).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (28).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (29).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (30).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (31).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (32).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (33).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (34).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (35).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (36).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (37).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (38).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (39).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (40).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (41).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (42).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (43).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (44).jpg" alt="galeria de imagenes">
-                <img class="img" src="/projects/photoAlbum/imgs/CD (45).jpg" alt="galeria de imagenes">
-
+                <img class="img" src="../PhotoAlbum/imgs/12.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/13.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/14.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/15.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/16.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/17.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/18.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/19.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/20.jpg" alt="galeria de imagenes">
+                <img class="img" src="../PhotoAlbum/imgs/21.jpg" alt="galeria de imagenes">
 
             </section>
     
