--- a/index.html
+++ b/index.html
@@ -31,27 +31,30 @@
             </div>
             
             <section id="galeria">
-                <img class="img" src="../PhotoAlbum/imgs/1.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/2.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/3.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/4.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/5.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/6.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/7.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/8.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/9.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/10.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/11.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/12.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/13.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/14.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/15.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/16.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/17.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/18.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/19.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/20.jpg" alt="galeria de imagenes">
-                <img class="img" src="../PhotoAlbum/imgs/21.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/1.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/2.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/3.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/4.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/5.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/6.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/7.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/8.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/9.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/10.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/11.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/12.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/13.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/14.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/15.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/16.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/17.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/18.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/19.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/20.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/21.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/22.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/23.jpg" alt="galeria de imagenes">
+                <img class="img" src="/imgs/24.jpg" alt="galeria de imagenes">
 
             </section>
     
